--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 server.port=8091
+spring.datasource.url=jdbc:postgresql://db:5432/alena
+spring.datasource.username=alena
+spring.datasource.password=alena
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.flyway.enabled=true
+spring.flyway.schemas=psgtable
+spring.flyway.user=alena
+spring.flyway.password=alena
+spring.jpa.properties.hibernate.default_schema = psgtable
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
