lab 6 successful deploy all services

--- a/kube/postgres.yaml
+++ b/kube/postgres.yaml
@@ -4,8 +4,8 @@ metadata:
   name: postgres-config
   namespace: default
 data:
-  postgres_user: usr
-  postgres_password: pwd
+  postgres_user: alena
+  postgres_password: alena
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
