--- a/weather-service/src/main/resources/application.properties
+++ b/weather-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8091
-spring.datasource.url=jdbc:postgresql://db:5432/testdb
+spring.datasource.url=jdbc:postgresql://postgres:5432/testdb
 spring.datasource.username=alena
 spring.datasource.password=alena
 spring.datasource.driver-class-name=org.postgresql.Driver
