--- a/rbc-service/pom.xml
+++ b/rbc-service/pom.xml
@@ -11,6 +11,11 @@
 
 
     <artifactId>rbc-service</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
