--- a/predict-service/pom.xml
+++ b/predict-service/pom.xml
@@ -11,5 +11,12 @@
 
     <artifactId>predict-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>io.micrometer</groupId>
+            <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
